<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fc_main_bg">

    <android.support.v7.widget.Toolbar
        android:id="@+id/every_fcs_toolbar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/white"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/everyday_fcs_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/everyday_title"
        android:textColor="@color/ad333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/every_fcs_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/every_fcs_toolbar"
        app:layout_constraintStart_toStartOf="@+id/every_fcs_toolbar"
        app:layout_constraintTop_toTopOf="@+id/every_fcs_toolbar" />

    <View
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/every_fcs_toolbar" />

    <ImageView
        android:id="@+id/iv_first_home"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/first_home"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <TextView
        style="@style/Fc16SP333ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/first_home_manager"
        app:layout_constraintStart_toEndOf="@+id/iv_first_home"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <TextView
        style="@style/Fc12SP6666ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="12dp"
        android:text="@string/first_home_task_manager"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintStart_toEndOf="@+id/iv_first_home" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="18dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/next_step"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <View
        android:id="@+id/view_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/adbbbbbb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space"/>

    <View
        android:id="@+id/space_follow"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_line" />

    <ImageView
        android:id="@+id/iv_visit"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/home_visit"
        app:layout_constraintBottom_toBottomOf="@+id/space_follow"
        app:layout_constraintStart_toStartOf="@+id/space_follow"
        app:layout_constraintTop_toTopOf="@+id/space_follow" />

    <TextView
        style="@style/Fc16SP333ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/visit_manager"
        app:layout_constraintStart_toEndOf="@+id/iv_visit"
        app:layout_constraintTop_toTopOf="@+id/space_follow" />

    <TextView
        style="@style/Fc12SP6666ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="12dp"
        android:text="@string/visit_detail_manager"
        app:layout_constraintBottom_toBottomOf="@+id/space_follow"
        app:layout_constraintStart_toEndOf="@+id/iv_visit" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="18dp"
        android:src="@drawable/next_step"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/space_follow"
        app:layout_constraintBottom_toBottomOf="@id/space_follow"
        app:layout_constraintEnd_toEndOf="parent" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@color/adbbbbbb"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space_follow"/>

    <View
        android:id="@+id/space_week"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/line" />

    <ImageView
        android:id="@+id/iv_week"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/weekly_travel"
        app:layout_constraintBottom_toBottomOf="@+id/space_week"
        app:layout_constraintStart_toStartOf="@+id/space_week"
        app:layout_constraintTop_toTopOf="@+id/space_week" />

    <TextView
        style="@style/Fc16SP333ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/week_manager"
        app:layout_constraintStart_toEndOf="@+id/iv_week"
        app:layout_constraintTop_toTopOf="@+id/space_week" />

    <TextView
        style="@style/Fc12SP6666ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="12dp"
        android:text="@string/week_detail_manager"
        app:layout_constraintBottom_toBottomOf="@+id/space_week"
        app:layout_constraintStart_toEndOf="@+id/iv_week" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="18dp"
        android:src="@drawable/next_step"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/space_week"
        app:layout_constraintBottom_toBottomOf="@+id/space_week"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
