<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fc_main_bg"
    tools:context="com.cango.adpickcar.fc.everyday.EverydayFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/every_toolbar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/white"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/everyday_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/everyday_title"
        android:textColor="@color/ad333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/every_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/every_toolbar"
        app:layout_constraintStart_toStartOf="@+id/every_toolbar"
        app:layout_constraintTop_toTopOf="@+id/every_toolbar" />

    <View
        android:id="@+id/space"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/every_toolbar" />

    <ImageView
        android:id="@+id/iv_daily_account"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/daily_accounting"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintStart_toStartOf="@+id/space"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <TextView
        style="@style/Fc16SP333ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/daily_account_name"
        app:layout_constraintStart_toEndOf="@+id/iv_daily_account"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <TextView
        style="@style/Fc12SP6666ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="12dp"
        android:text="@string/daily_account_prompt"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintStart_toEndOf="@+id/iv_daily_account" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="18dp"
        android:layout_marginEnd="10dp"
        android:src="@drawable/next_step"
        app:layout_constraintBottom_toBottomOf="@+id/space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/space" />

    <View
        android:id="@+id/space_download"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginTop="6dp"
        android:background="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/space" />

    <ImageView
        android:id="@+id/iv_daily_download"
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/daily_download"
        app:layout_constraintBottom_toBottomOf="@+id/space_download"
        app:layout_constraintStart_toStartOf="@+id/space_download"
        app:layout_constraintTop_toTopOf="@+id/space_download" />

    <TextView
        style="@style/Fc16SP333ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="22dp"
        android:text="@string/daily_download_name"
        app:layout_constraintStart_toEndOf="@+id/iv_daily_download"
        app:layout_constraintTop_toTopOf="@+id/space_download" />

    <TextView
        style="@style/Fc12SP6666ColorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="22dp"
        android:layout_marginStart="12dp"
        android:text="@string/daily_download_prompt"
        app:layout_constraintBottom_toBottomOf="@+id/space_download"
        app:layout_constraintStart_toEndOf="@+id/iv_daily_download" />

    <ImageView
        android:layout_width="10dp"
        android:layout_height="18dp"
        android:src="@drawable/next_step"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toTopOf="@+id/space_download"
        app:layout_constraintBottom_toBottomOf="@id/space_download"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
