<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.cango.adpickcar.fc.accountmanager.AccManagerFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fc_main_bg">


    <android.support.v7.widget.Toolbar
        android:id="@+id/acc_mgr_toolbar"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:background="@android:color/white"
        app:contentInsetStart="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/acc_mgr_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/daily_account_name"
        android:textColor="@color/ad333333"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/acc_mgr_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/acc_mgr_toolbar"
        app:layout_constraintStart_toStartOf="@+id/acc_mgr_toolbar"
        app:layout_constraintTop_toTopOf="@+id/acc_mgr_toolbar" />

    <LinearLayout
        android:id="@+id/ll_tally_accounts"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingEnd="12dp"
        android:paddingStart="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/acc_mgr_toolbar"
        app:layout_constraintEnd_toEndOf="@+id/acc_mgr_toolbar"
        app:layout_constraintTop_toTopOf="@+id/acc_mgr_toolbar">

        <ImageView
            android:layout_width="15dp"
            android:layout_height="18dp"
            android:src="@drawable/keep_accounts" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/tally_book"
            android:textColor="@color/ad666666"
            android:textSize="10sp" />
    </LinearLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:scrollbars="none"
        android:overScrollMode="never"
        app:layout_constraintBottom_toTopOf="@+id/tv_confirm"
        app:layout_constraintTop_toBottomOf="@+id/acc_mgr_toolbar">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.view.ViewPager
                android:id="@+id/vp_acc_manager"
                android:layout_width="match_parent"
                android:layout_height="230dp"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.rd.PageIndicatorView
                android:id="@+id/pageindicatorview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                app:layout_constraintEnd_toStartOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/vp_acc_manager"
                app:piv_animationType="worm"
                app:piv_dynamicCount="true"
                app:piv_interactiveAnimation="true"
                app:piv_padding="16dp"
                app:piv_radius="4dp"
                app:piv_selectedColor="@color/fc_text_blue"
                app:piv_unselectedColor="@color/mt9c9c9c"
                app:piv_viewPager="@id/vp_acc_manager" />

            <TextView
                android:id="@+id/tv_fromto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/reimbursement_from_to"
                android:textColor="@color/ad333333"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pageindicatorview" />

            <EditText
                android:id="@+id/space_fromto"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/daily_view_stroke_d0"
                android:drawableRight="@drawable/amount"
                android:inputType="text"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_fromto" />

            <TextView
                android:id="@+id/tv_calender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/date_prompt"
                android:textColor="@color/ad333333"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space_fromto" />

            <TextView
                android:id="@+id/space_data"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/daily_view_stroke_d0"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_calender" />

            <ImageView
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/daily_date"
                app:layout_constraintBottom_toBottomOf="@+id/space_data"
                app:layout_constraintEnd_toEndOf="@+id/space_data"
                app:layout_constraintTop_toTopOf="@+id/space_data" />

            <TextView
                android:id="@+id/tv_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/reimbursement_amount_prompt"
                android:textColor="@color/ad333333"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/space_data" />

            <EditText
                android:id="@+id/space_money"
                android:layout_width="0dp"
                android:layout_height="42dp"
                android:layout_marginEnd="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/daily_view_stroke_d0"
                android:drawableRight="@drawable/amount"
                android:inputType="number"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_money" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
    <TextView
        android:id="@+id/tv_confirm"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:background="@color/fc_text_blue"
        android:gravity="center"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginTop="100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>
